--- a/style.css
+++ b/style.css
@@ -19,6 +19,14 @@ h1 {
   font-size: 60px;
   color:rgb(0, 0, 0);
 }
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: transparent;
+    padding: 10px 0;
+}
 
 h2 {
   transform: translate(1rem, 3rem);
